--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
 [build]
-  command = "netlify-extension build"
-  publish = ".ntli/site/static"
+command = "netlify-extension build"
+publish = ".ntli/site/static"
+
+[dev]
+command = "netlify-extension dev"
+port = 8989
 
 [functions]
-  directory = "src/endpoints"
+directory = "src/endpoints"
 
 [[plugins]]
-  package = "@netlify/netlify-plugin-netlify-extension"
+package = "@netlify/netlify-plugin-netlify-extension"
