--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
-  "name": "otterlyai-agentic-analytics-extension",
+  "name": "otterlyai-agentic-analytics",
   "version": "0.0.1",
-  "type": "module",
+  "license": "UNLICENSED",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
-    "build": "netlify-extension build -a",
-    "dev": "netlify-extension dev --open"
+    "build": "netlify-extension build",
+    "dev": "netlify-extension dev",
+    "dev:open": "netlify-extension dev --open"
   },
   "dependencies": {
-    "@netlify/sdk": "^5.0.1",
-    "yaml": "^2.8.1"
+    "@netlify/sdk": "^5.0.2",
+    "@netlify/functions": "^5.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@tanstack/react-query": "^5.62.1",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
-    "@netlify/netlify-plugin-netlify-extension": "^1.2.2",
-    "typescript": "^5.0.0"
+    "@netlify/netlify-plugin-netlify-extension": "1.2.2",
+    "typescript": "5.9.3",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@tsconfig/node18": "18.2.6",
+    "@tsconfig/recommended": "1.0.13",
+    "@tsconfig/strictest": "2.0.8",
+    "@tsconfig/vite-react": "7.0.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.19",
+    "autoprefixer": "^10.4.7",
+    "tailwindcss": "^3.4.3",
+    "netlify-cli": "23.12.2"
   }
 }
